# secedgarspecial

./: .gitignore  main.py  pyproject.toml
secedgarspecial/: __init__.py  html_handler.py  json_handler.py  processor.py  utils.py
