[tool.poetry]
name = "secedgarspecial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "secedgarspecial"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
beautifulsoup4 = "^4.12.3"
ipykernel = "^6.29.5"
tenacity = "^8.2"
fire = "^0.5"
jsonlines = "^4.0"
requests = "^2.31"
xmltodict = "^0.13"
edgar-tool = "^1.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
